fix: Move headline and subhead to left align 20 pixels. Everything should be left aligned 20 pixels from white border.

--- a/drupal/profiles/takepart/themes/takepart3/css/old_custom.css
+++ b/drupal/profiles/takepart/themes/takepart3/css/old_custom.css
@@ -17,12 +17,6 @@ body.sidebar-first #left-rail{
 .node-type-takepart-group .region-highlighted{
     padding:35px 0px 0;
 }
-.node-type-openpublish-photo-gallery .page,
-.node-type-takepart-group .page {
-    padding: 20px 20px 35px 0px !important;
-}
-
-
 
 body.node-type-takepart-group #content,
 body.node-type-takepart-group #left-rail{
